--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "nek-ui by vue",
   "author": "kaola-FED",
+  "main": "app.js",
   "private": true,
   "scripts": {
     "dev": "node build/dev-server.js",
@@ -16,7 +17,13 @@
   "dependencies": {
     "babel-runtime": "^6.26.0",
     "clipboard": "^1.7.1",
+    "element-kaola": "^3.0.17",
+    "element-ui": "^2.4.6",
     "highlightjs": "^8.7.0",
+    "node-sass": "^4.9.2",
+    "pm2": "^3.1.2",
+    "sass": "^1.9.2",
+    "sass-loader": "^7.0.3",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
@@ -40,16 +47,16 @@
     "cross-spawn": "^5.0.1",
     "css-loader": "^0.28.0",
     "eslint": "^3.19.0",
+    "eslint-config-kaola": "^0.1.3",
     "eslint-friendly-formatter": "^3.0.0",
+    "eslint-loader": "^1.9.0",
     "eslint-plugin-html": "^3.2.2",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-node": "^5.2.0",
     "eslint-plugin-promise": "^3.4.0",
-    "eslint-config-kaola": "^0.1.3",
-    "eslint-loader": "^1.9.0",
     "eslint-plugin-vue": "^2.1.0",
     "eventsource-polyfill": "^0.9.6",
-    "express": "^4.14.1",
+    "express": "^4.16.3",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
