添加发布命令

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "app.js",
   "private": true,
   "scripts": {
+    "release": "npm install && npm run build && pm2 start app.js",
     "dev": "node build/dev-server.js",
     "start": "npm run dev",
     "build": "node build/build.js",
